Switch the library to a Maven setup and add tests